Changed Nginx http redirection to https

--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -6,8 +6,8 @@ server {
 
         root /var/www/html;
 
-        location ~* {
-                deny all;
+        location / {
+                rewrite ^ https://$host$request_uri? permanent;
         }
 }
 
