Updated .env-example file

--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
-MYSQL_ROOT_PASSWORD=xxx
-MYSQL_USER=xxx
-MYSQL_PASSWORD=xxx
-MYSQL_DB_NAME=xxx
+MYSQL_ROOT_PASSWORD=xxxx
+MYSQL_USER=xxxx
+MYSQL_PASSWORD=xxxx
+MYSQL_DATABASE=xxxx
