Cleaned nginx.conf

--- a/nginx/conf.d/nginx.conf
+++ b/nginx/conf.d/nginx.conf
@@ -2,12 +2,10 @@ server {
     listen 80;
     listen [::]:80;
 
-	server_name localhost
-
-    root /var/www/html;
+	server_name localhost;
 
     location / {
-            rewrite ^ https://$host$request_uri? permanent;
+        rewrite ^ https://$host$request_uri? permanent;
     }
 }
 
