--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     restart: unless-stopped
     ports:
       - 3306:3306
+    env_file: .env
     volumes:
       - db-data:/var/lib/mysql
     networks:
@@ -16,6 +17,7 @@ services:
     image: wordpress:6.5.4-fpm-alpine
     container_name: wordpress
     restart: unless-stopped
+    env_file: .env
     environment:
       - WORDPRESS_DB_HOST=db
       - WORDPRESS_DB_USER=$MYSQL_USER
